Added initial landing page design

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,24 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="stylesheet" href="/public/css/styles.css" />
 		<title>Kent Concengco | Portfolio</title>
 	</head>
-	<body></body>
+	<body>
+		<nav>
+			<h1 id="logo">CantCode</h1>
+			<a>Projects</a>
+			<a>Skills</a>
+			<a>Contact</a>
+		</nav>
+
+		<div id="landing" class="container">
+			<div id="landing-text">
+				<p>Hi, my name is</p>
+				<h1>Kent Concengco</h1>
+				<h2>a software developer</h2>
+
+			</div>
+		</div>
+	</body>
 </html>
