--- a/src/index.html
+++ b/src/index.html
@@ -57,16 +57,20 @@
 							/>
 						</svg>
 					</button>
-					<div class="carousel__track-container w-full h-full relative">
-						<ul class="carousel__track w-full h-full m-0 p-0 list-none">
+					<div
+						class="carousel__track-container w-full h-full relative overflow-hidden"
+					>
+						<ul
+							class="carousel__track w-full h-full m-0 p-0 list-none transition-transform ease-in delay-200"
+						>
 							<li
-								class="carousel__slide w-full h-full absolute top-0 bottom-0"
+								class="carousel__slide hidden bg-red-700 w-full h-full absolute top-0 bottom-0 current-slide"
 							></li>
 							<li
-								class="carousel__slide w-full h-full absolute top-0 bottom-0"
+								class="carousel__slide hidden bg-blue-700 w-full h-full absolute top-0 bottom-0"
 							></li>
 							<li
-								class="carousel__slide w-full h-full absolute top-0 bottom-0"
+								class="carousel__slide hidden bg-green-700 w-full h-full absolute top-0 bottom-0"
 							></li>
 						</ul>
 					</div>
@@ -94,13 +98,13 @@
 						class="carousel__nav py-3 absolute bottom-0 left-1/2 -translate-x-1/2"
 					>
 						<button
-							class="carousel__indicator rounded-full w-4 h-4 mx-2"
+							class="carousel__indicator rounded-full w-4 h-4 mx-2 opacity-40 current-slide"
 						></button
 						><button
-							class="carousel__indicator rounded-full w-4 h-4 mx-2"
+							class="carousel__indicator rounded-full w-4 h-4 mx-2 opacity-40"
 						></button
 						><button
-							class="carousel__indicator rounded-full w-4 h-4 mx-2"
+							class="carousel__indicator rounded-full w-4 h-4 mx-2 opacity-40"
 						></button>
 					</div>
 				</div>
@@ -111,5 +115,6 @@
 				class="flex flex-col justify-center h-screen w-full max-w-screen-2xl px-20"
 			></div>
 		</div>
+		<script src="/src/js/carousel.js"></script>
 	</body>
 </html>
