--- a/src/index.html
+++ b/src/index.html
@@ -64,14 +64,137 @@
 							class="carousel__track w-full h-full m-0 p-0 list-none transition-transform ease-in delay-200"
 						>
 							<li
-								class="carousel__slide hidden bg-red-700 w-full h-full absolute top-0 bottom-0 current-slide"
-							></li>
+								class="carousel__slide invisible flex justify-around w-full h-full absolute top-0 bottom-0 current-slide"
+							>
+								<div class="flex flex-col w-1/2 py-10 px-8 items-start">
+									<h2 class="text-4xl w-fit pb-3">Breadventory</h2>
+									<p class="text-xl pb-6">
+										Lorem ipsum dolor sit amet consectetur adipisicing elit.
+										Deleniti temporibus impedit quibusdam perspiciatis dolore
+										sapiente? Distinctio dolorum dolorem, voluptates dignissimos
+										dicta id sit unde eligendi numquam! Id non quisquam
+										laudantium!
+									</p>
+									<h3 class="text-3xl w-fit pb-3">Features</h3>
+									<h4 class="text-2xl w-fit">Feature 1</h4>
+									<p class="text-lg pb-4">
+										Lorem ipsum dolor sit amet consectetur adipisicing elit.
+										Deleniti temporibus impedit quibusdam perspiciatis dolore
+										sapiente? Distinctio dolorum dolorem, voluptates dignissimos
+										dicta id sit unde eligendi numquam! Id non quisquam
+										laudantium!
+									</p>
+									<h4 class="text-2xl w-fit">Feature 1</h4>
+									<p class="text-lg pb-4">
+										Lorem ipsum dolor sit amet consectetur adipisicing elit.
+										Deleniti temporibus impedit quibusdam perspiciatis dolore
+										sapiente? Distinctio dolorum dolorem, voluptates dignissimos
+										dicta id sit unde eligendi numquam! Id non quisquam
+										laudantium!
+									</p>
+								</div>
+
+								<div class="flex flex-col w-1/2"></div>
+							</li>
 							<li
-								class="carousel__slide hidden bg-blue-700 w-full h-full absolute top-0 bottom-0"
-							></li>
+								class="carousel__slide invisible flex justify-around w-full h-full absolute top-0 bottom-0"
+							>
+								<div class="flex flex-col w-1/2 py-10 px-8 items-start">
+									<h2 class="text-4xl w-fit pb-3">BuddyUp</h2>
+									<p class="text-xl pb-6">
+										Lorem ipsum dolor sit amet consectetur adipisicing elit.
+										Deleniti temporibus impedit quibusdam perspiciatis dolore
+										sapiente? Distinctio dolorum dolorem, voluptates dignissimos
+										dicta id sit unde eligendi numquam! Id non quisquam
+										laudantium!
+									</p>
+									<h3 class="text-3xl w-fit pb-3">Features</h3>
+									<h4 class="text-2xl w-fit">Feature 1</h4>
+									<p class="text-lg pb-4">
+										Lorem ipsum dolor sit amet consectetur adipisicing elit.
+										Deleniti temporibus impedit quibusdam perspiciatis dolore
+										sapiente? Distinctio dolorum dolorem, voluptates dignissimos
+										dicta id sit unde eligendi numquam! Id non quisquam
+										laudantium!
+									</p>
+									<h4 class="text-2xl w-fit">Feature 1</h4>
+									<p class="text-lg pb-4">
+										Lorem ipsum dolor sit amet consectetur adipisicing elit.
+										Deleniti temporibus impedit quibusdam perspiciatis dolore
+										sapiente? Distinctio dolorum dolorem, voluptates dignissimos
+										dicta id sit unde eligendi numquam! Id non quisquam
+										laudantium!
+									</p>
+								</div>
+
+								<div class="flex flex-col w-1/2"></div>
+							</li>
 							<li
-								class="carousel__slide hidden bg-green-700 w-full h-full absolute top-0 bottom-0"
-							></li>
+								class="carousel__slide invisible flex justify-around w-full h-full absolute top-0 bottom-0"
+							>
+								<div class="flex flex-col w-1/2 py-10 px-8 items-start">
+									<h2 class="text-4xl w-fit pb-3">FindaPotty</h2>
+									<p class="text-xl pb-6">
+										Lorem ipsum dolor sit amet consectetur adipisicing elit.
+										Deleniti temporibus impedit quibusdam perspiciatis dolore
+										sapiente? Distinctio dolorum dolorem, voluptates dignissimos
+										dicta id sit unde eligendi numquam! Id non quisquam
+										laudantium!
+									</p>
+									<h3 class="text-3xl w-fit pb-3">Features</h3>
+									<h4 class="text-2xl w-fit">Feature 1</h4>
+									<p class="text-lg pb-4">
+										Lorem ipsum dolor sit amet consectetur adipisicing elit.
+										Deleniti temporibus impedit quibusdam perspiciatis dolore
+										sapiente? Distinctio dolorum dolorem, voluptates dignissimos
+										dicta id sit unde eligendi numquam! Id non quisquam
+										laudantium!
+									</p>
+									<h4 class="text-2xl w-fit">Feature 1</h4>
+									<p class="text-lg pb-4">
+										Lorem ipsum dolor sit amet consectetur adipisicing elit.
+										Deleniti temporibus impedit quibusdam perspiciatis dolore
+										sapiente? Distinctio dolorum dolorem, voluptates dignissimos
+										dicta id sit unde eligendi numquam! Id non quisquam
+										laudantium!
+									</p>
+								</div>
+
+								<div class="flex flex-col w-1/2"></div>
+							</li>
+							<li
+								class="carousel__slide invisible flex justify-around w-full h-full absolute top-0 bottom-0"
+							>
+								<div class="flex flex-col w-1/2 py-10 px-8 items-start">
+									<h2 class="text-4xl w-fit pb-3">Atlas</h2>
+									<p class="text-xl pb-6">
+										Lorem ipsum dolor sit amet consectetur adipisicing elit.
+										Deleniti temporibus impedit quibusdam perspiciatis dolore
+										sapiente? Distinctio dolorum dolorem, voluptates dignissimos
+										dicta id sit unde eligendi numquam! Id non quisquam
+										laudantium!
+									</p>
+									<h3 class="text-3xl w-fit pb-3">Features</h3>
+									<h4 class="text-2xl w-fit">Feature 1</h4>
+									<p class="text-lg pb-4">
+										Lorem ipsum dolor sit amet consectetur adipisicing elit.
+										Deleniti temporibus impedit quibusdam perspiciatis dolore
+										sapiente? Distinctio dolorum dolorem, voluptates dignissimos
+										dicta id sit unde eligendi numquam! Id non quisquam
+										laudantium!
+									</p>
+									<h4 class="text-2xl w-fit">Feature 1</h4>
+									<p class="text-lg pb-4">
+										Lorem ipsum dolor sit amet consectetur adipisicing elit.
+										Deleniti temporibus impedit quibusdam perspiciatis dolore
+										sapiente? Distinctio dolorum dolorem, voluptates dignissimos
+										dicta id sit unde eligendi numquam! Id non quisquam
+										laudantium!
+									</p>
+								</div>
+
+								<div class="flex flex-col w-1/2"></div>
+							</li>
 						</ul>
 					</div>
 					<button
@@ -106,10 +229,14 @@
 						><button
 							class="carousel__indicator rounded-full w-4 h-4 mx-2 opacity-40"
 						></button>
+						<button
+							class="carousel__indicator rounded-full w-4 h-4 mx-2 opacity-40"
+						></button>
 					</div>
 				</div>
 			</div>
 
+			<!-- Skills section -->
 			<div
 				id="skills"
 				class="flex flex-col justify-center h-screen w-full max-w-screen-2xl px-20"
