--- a/src/index.html
+++ b/src/index.html
@@ -8,47 +8,44 @@
 		<title>Kent Concengco | Portfolio</title>
 	</head>
 	<body>
-		<div class="flex flex-col items-center">
+		<div class="flex w-full flex-col items-center overflow-x-hidden">
 			<!-- Navbar -->
 			<nav
-				class="z-20 flex p-4 justify-end items-center w-full fixed max-w-screen-2xl"
+				class="fixed z-20 flex w-full items-center justify-end"
 			>
-				<h1 id="logo" class="mx-8">CantCode</h1>
-				<a class="font-semibold text-lg my-0 mx-8">Projects</a>
-				<a class="font-semibold text-lg my-0 mx-8">Skills</a>
-				<a class="font-semibold text-lg my-0 mx-8">Contact</a>
+				<h1 id="logo" class="xl:mx-8 md:mx-6">KentCode</h1>
+				<a class="nav__links" href="#projects">Projects</a>
+				<a class="nav__links" href="#Projects">Skills</a>
+				<a class="nav__links" href="#Projects">Contact</a>
 			</nav>
 			<!-- Hero section -->
-			<div
-				id="landing"
-				class="section flex flex-col justify-center h-screen w-full max-w-screen-2xl px-20"
-			>
+			<div id="landing" class="section flex-col justify-center xl:px-14 md:px-8">
 				<div id="landing-text">
-					<p>Hi, my name is</p>
-					<h1>Kent Concengco</h1>
-					<h2>a software developer</h2>
+					<p class="xl:text-xl xl:mb-1 md:text-base">Hi, my name is</pc>
+					<h1 class="xl:text-7xl xl:leading-10 md:text-5xl md:leading-9">Kent Concengco</h1>
+					<h2 class="xl:mt-2 xl:text-3xl md:text-2xl">a software developer</h2>
 				</div>
 			</div>
+
 			<!-- Projects section -->
 			<div
 				id="projects"
-				class="flex flex-col justify-center h-screen w-full max-w-screen-2xl px-20 py-3"
+				class="section flex-col items-start justify-between pb-3 xl:px-14 xl:pt-8 md:pt-3 md:px-8"
 			>
-				<h1 class="text-6xl pb-6 w-fit mb-auto self-center">Projects</h1>
+				<h1 class="w-fit self-center pb-6 xl:text-6xl md:text-4xl">Projects</h1>
 
-				<!-- Project carousel -->
-				<div class="carousel w-full h-full relative">
+				<div class="carousel relative w-full">
 					<button
 						id="carousel_button-left"
-						class="z-10 carousel__button absolute top-1/2 -left-14"
+						class="carousel__button absolute top-1/2 xl:-left-8 md:-left-5 z-10"
 					>
 						<svg
 							xmlns="http://www.w3.org/2000/svg"
 							fill="none"
 							viewBox="0 0 24 24"
-							stroke-width="1.5"
+							stroke-width="2.5"
 							stroke="white"
-							class="w-6 h-6"
+							class="h-6 w-6"
 						>
 							<path
 								stroke-linecap="round"
@@ -57,157 +54,18 @@
 							/>
 						</svg>
 					</button>
-					<div
-						class="carousel__track-container w-full h-full relative overflow-hidden"
-					>
-						<ul
-							class="carousel__track w-full h-full m-0 p-0 list-none transition-transform ease-in delay-200"
-						>
-							<li
-								class="carousel__slide invisible flex justify-around w-full h-full absolute top-0 bottom-0 current-slide"
-							>
-								<div class="flex flex-col w-1/2 py-10 px-8 items-start">
-									<h2 class="text-4xl w-fit pb-3">Breadventory</h2>
-									<p class="text-xl pb-6">
-										Lorem ipsum dolor sit amet consectetur adipisicing elit.
-										Deleniti temporibus impedit quibusdam perspiciatis dolore
-										sapiente? Distinctio dolorum dolorem, voluptates dignissimos
-										dicta id sit unde eligendi numquam! Id non quisquam
-										laudantium!
-									</p>
-									<h3 class="text-3xl w-fit pb-3">Features</h3>
-									<h4 class="text-2xl w-fit">Feature 1</h4>
-									<p class="text-lg pb-4">
-										Lorem ipsum dolor sit amet consectetur adipisicing elit.
-										Deleniti temporibus impedit quibusdam perspiciatis dolore
-										sapiente? Distinctio dolorum dolorem, voluptates dignissimos
-										dicta id sit unde eligendi numquam! Id non quisquam
-										laudantium!
-									</p>
-									<h4 class="text-2xl w-fit">Feature 1</h4>
-									<p class="text-lg pb-4">
-										Lorem ipsum dolor sit amet consectetur adipisicing elit.
-										Deleniti temporibus impedit quibusdam perspiciatis dolore
-										sapiente? Distinctio dolorum dolorem, voluptates dignissimos
-										dicta id sit unde eligendi numquam! Id non quisquam
-										laudantium!
-									</p>
-								</div>
 
-								<div class="flex flex-col w-1/2"></div>
-							</li>
-							<li
-								class="carousel__slide invisible flex justify-around w-full h-full absolute top-0 bottom-0"
-							>
-								<div class="flex flex-col w-1/2 py-10 px-8 items-start">
-									<h2 class="text-4xl w-fit pb-3">BuddyUp</h2>
-									<p class="text-xl pb-6">
-										Lorem ipsum dolor sit amet consectetur adipisicing elit.
-										Deleniti temporibus impedit quibusdam perspiciatis dolore
-										sapiente? Distinctio dolorum dolorem, voluptates dignissimos
-										dicta id sit unde eligendi numquam! Id non quisquam
-										laudantium!
-									</p>
-									<h3 class="text-3xl w-fit pb-3">Features</h3>
-									<h4 class="text-2xl w-fit">Feature 1</h4>
-									<p class="text-lg pb-4">
-										Lorem ipsum dolor sit amet consectetur adipisicing elit.
-										Deleniti temporibus impedit quibusdam perspiciatis dolore
-										sapiente? Distinctio dolorum dolorem, voluptates dignissimos
-										dicta id sit unde eligendi numquam! Id non quisquam
-										laudantium!
-									</p>
-									<h4 class="text-2xl w-fit">Feature 1</h4>
-									<p class="text-lg pb-4">
-										Lorem ipsum dolor sit amet consectetur adipisicing elit.
-										Deleniti temporibus impedit quibusdam perspiciatis dolore
-										sapiente? Distinctio dolorum dolorem, voluptates dignissimos
-										dicta id sit unde eligendi numquam! Id non quisquam
-										laudantium!
-									</p>
-								</div>
-
-								<div class="flex flex-col w-1/2"></div>
-							</li>
-							<li
-								class="carousel__slide invisible flex justify-around w-full h-full absolute top-0 bottom-0"
-							>
-								<div class="flex flex-col w-1/2 py-10 px-8 items-start">
-									<h2 class="text-4xl w-fit pb-3">FindaPotty</h2>
-									<p class="text-xl pb-6">
-										Lorem ipsum dolor sit amet consectetur adipisicing elit.
-										Deleniti temporibus impedit quibusdam perspiciatis dolore
-										sapiente? Distinctio dolorum dolorem, voluptates dignissimos
-										dicta id sit unde eligendi numquam! Id non quisquam
-										laudantium!
-									</p>
-									<h3 class="text-3xl w-fit pb-3">Features</h3>
-									<h4 class="text-2xl w-fit">Feature 1</h4>
-									<p class="text-lg pb-4">
-										Lorem ipsum dolor sit amet consectetur adipisicing elit.
-										Deleniti temporibus impedit quibusdam perspiciatis dolore
-										sapiente? Distinctio dolorum dolorem, voluptates dignissimos
-										dicta id sit unde eligendi numquam! Id non quisquam
-										laudantium!
-									</p>
-									<h4 class="text-2xl w-fit">Feature 1</h4>
-									<p class="text-lg pb-4">
-										Lorem ipsum dolor sit amet consectetur adipisicing elit.
-										Deleniti temporibus impedit quibusdam perspiciatis dolore
-										sapiente? Distinctio dolorum dolorem, voluptates dignissimos
-										dicta id sit unde eligendi numquam! Id non quisquam
-										laudantium!
-									</p>
-								</div>
-
-								<div class="flex flex-col w-1/2"></div>
-							</li>
-							<li
-								class="carousel__slide invisible flex justify-around w-full h-full absolute top-0 bottom-0"
-							>
-								<div class="flex flex-col w-1/2 py-10 px-8 items-start">
-									<h2 class="text-4xl w-fit pb-3">Atlas</h2>
-									<p class="text-xl pb-6">
-										Lorem ipsum dolor sit amet consectetur adipisicing elit.
-										Deleniti temporibus impedit quibusdam perspiciatis dolore
-										sapiente? Distinctio dolorum dolorem, voluptates dignissimos
-										dicta id sit unde eligendi numquam! Id non quisquam
-										laudantium!
-									</p>
-									<h3 class="text-3xl w-fit pb-3">Features</h3>
-									<h4 class="text-2xl w-fit">Feature 1</h4>
-									<p class="text-lg pb-4">
-										Lorem ipsum dolor sit amet consectetur adipisicing elit.
-										Deleniti temporibus impedit quibusdam perspiciatis dolore
-										sapiente? Distinctio dolorum dolorem, voluptates dignissimos
-										dicta id sit unde eligendi numquam! Id non quisquam
-										laudantium!
-									</p>
-									<h4 class="text-2xl w-fit">Feature 1</h4>
-									<p class="text-lg pb-4">
-										Lorem ipsum dolor sit amet consectetur adipisicing elit.
-										Deleniti temporibus impedit quibusdam perspiciatis dolore
-										sapiente? Distinctio dolorum dolorem, voluptates dignissimos
-										dicta id sit unde eligendi numquam! Id non quisquam
-										laudantium!
-									</p>
-								</div>
-
-								<div class="flex flex-col w-1/2"></div>
-							</li>
-						</ul>
-					</div>
 					<button
 						id="carousel_button-right"
-						class="z-10 carousel__button absolute top-1/2 -right-14"
+						class="carousel__button absolute top-1/2 xl:-right-8 md:-right-5 z-10"
 					>
 						<svg
 							xmlns="http://www.w3.org/2000/svg"
 							fill="none"
 							viewBox="0 0 24 24"
-							stroke-width="1.5"
+							stroke-width="2.5"
 							stroke="white"
-							class="w-6 h-6"
+							class="h-6 w-6"
 						>
 							<path
 								stroke-linecap="round"
@@ -217,30 +75,63 @@
 						</svg>
 					</button>
 
-					<div
-						class="carousel__nav py-3 absolute bottom-0 left-1/2 -translate-x-1/2"
-					>
-						<button
-							class="carousel__indicator rounded-full w-4 h-4 mx-2 opacity-40 current-slide"
-						></button
-						><button
-							class="carousel__indicator rounded-full w-4 h-4 mx-2 opacity-40"
-						></button
-						><button
-							class="carousel__indicator rounded-full w-4 h-4 mx-2 opacity-40"
-						></button>
-						<button
-							class="carousel__indicator rounded-full w-4 h-4 mx-2 opacity-40"
-						></button>
+					<div class="carousel__track-container relative w-full">
+						<div class="carousel__track h-fit w-full">
+							<!-- Breadventory -->
+							<div
+								class="carousel__slide current-slide flex h-fit w-full flex-row"
+							>
+								<div class="carousel__slide-text">
+									<h2>Breadventory</h2>
+									<p>
+										Lorem ipsum dolor sit amet consectetur adipisicing elit.
+										Deleniti temporibus impedit quibusdam perspiciatis dolore
+										sapiente? Distinctio dolorum dolorem, voluptates dignissimos
+										dicta id sit unde eligendi numquam! Id non quisquam
+										laudantium!
+									</p>
+									<h3>Features</h3>
+									<h4>Feature 1</h4>
+									<p >
+										Lorem ipsum dolor sit amet consectetur adipisicing elit.
+										Deleniti temporibus impedit quibusdam perspiciatis dolore
+										sapiente? Distinctio dolorum dolorem, voluptates dignissimos
+										dicta id sit unde eligendi numquam! Id non quisquam
+										laudantium!
+									</p>
+									<h4>Feature 1</h4>
+									<p>
+										Lorem ipsum dolor sit amet consectetur adipisicing elit.
+										Deleniti temporibus impedit quibusdam perspiciatis dolore
+										sapiente? Distinctio dolorum dolorem, voluptates dignissimos
+										dicta id sit unde eligendi numquam! Id non quisquam
+										laudantium!
+									</p>
+								</div>
+
+								<div class="flex w-1/2 flex-col h-full items-center">
+									<img src="/src/images/Breadventory_UI.png" alt="Breadventory UI">
+								</div>
+
+							</div>
+							<!-- BuddyUp -->
+							<!-- FindaPotty -->
+
+							<!-- Atlas -->
+
+						</div>
 					</div>
+				</div>
+
+				<div class="carousel__nav self-center">
+					<button class="carousel__indicator current-slide"></button
+					><button class="carousel__indicator"></button
+					><button class="carousel__indicator"></button>
+					<button class="carousel__indicator"></button>
 				</div>
 			</div>
 
 			<!-- Skills section -->
-			<div
-				id="skills"
-				class="flex flex-col justify-center h-screen w-full max-w-screen-2xl px-20"
-			></div>
 		</div>
 		<script src="/src/js/carousel.js"></script>
 	</body>
