Added infinite carousel for skill section

--- a/src/index.html
+++ b/src/index.html
@@ -8,14 +8,14 @@
 		<title>Kent Concengco | Portfolio</title>
 	</head>
 	<body>
-		<div class="flex w-full flex-col items-center overflow-x-hidden">
+		<div class="flex w-full flex-col items-center">
 			<!-- Navbar -->
 			<nav
 				class="fixed z-20 flex w-full items-center justify-end"
 			>
 				<h1 id="logo" class="xl:mx-8 md:mx-6">KentCode</h1>
 				<a class="nav__links" href="#projects">Projects</a>
-				<a class="nav__links" href="#Projects">Skills</a>
+				<a class="nav__links" href="#skills">Skills</a>
 				<a class="nav__links" href="#Projects">Contact</a>
 			</nav>
 			<!-- Hero section -->
@@ -115,6 +115,42 @@
 
 							</div>
 							<!-- BuddyUp -->
+							<div
+							class="carousel__slide flex h-fit w-full flex-row"
+						>
+							<div class="carousel__slide-text">
+								<h2>Breadventory</h2>
+								<p>
+									Lorem ipsum dolor sit amet consectetur adipisicing elit.
+									Deleniti temporibus impedit quibusdam perspiciatis dolore
+									sapiente? Distinctio dolorum dolorem, voluptates dignissimos
+									dicta id sit unde eligendi numquam! Id non quisquam
+									laudantium!
+								</p>
+								<h3>Features</h3>
+								<h4>Feature 1</h4>
+								<p >
+									Lorem ipsum dolor sit amet consectetur adipisicing elit.
+									Deleniti temporibus impedit quibusdam perspiciatis dolore
+									sapiente? Distinctio dolorum dolorem, voluptates dignissimos
+									dicta id sit unde eligendi numquam! Id non quisquam
+									laudantium!
+								</p>
+								<h4>Feature 1</h4>
+								<p>
+									Lorem ipsum dolor sit amet consectetur adipisicing elit.
+									Deleniti temporibus impedit quibusdam perspiciatis dolore
+									sapiente? Distinctio dolorum dolorem, voluptates dignissimos
+									dicta id sit unde eligendi numquam! Id non quisquam
+									laudantium!
+								</p>
+							</div>
+
+							<div class="flex w-1/2 flex-col h-full items-center">
+								<img src="/src/images/Breadventory_UI.png" alt="Breadventory UI">
+							</div>
+
+						</div>
 							<!-- FindaPotty -->
 
 							<!-- Atlas -->
@@ -132,7 +168,49 @@
 			</div>
 
 			<!-- Skills section -->
+			<div id="skills" class="section flex-col justify-center items-center xl:px-14 md:px-8">
+				<div class="marquee">
+					<div class="marquee__inner marquee-left">
+						<span class="skillbox_container flex">
+							<div class="skillbox"></div>
+							<div class="skillbox red"></div>
+							<div class="skillbox yellow"></div>
+							<div class="skillbox blue"></div>
+							<div class="skillbox orange"></div>
+							<div class="skillbox purple"></div>
+							<div class="skillbox green"></div>
+						</span>
+					</div>
+				</div>
+				<div class="marquee">
+					<div class="marquee__inner marquee-right">
+						<span class="skillbox_container flex">
+							<div class="skillbox"></div>
+							<div class="skillbox red"></div>
+							<div class="skillbox yellow"></div>
+							<div class="skillbox blue"></div>
+							<div class="skillbox orange"></div>
+							<div class="skillbox purple"></div>
+							<div class="skillbox green"></div>
+						</span>
+					</div>
+				</div>
+				<div class="marquee">
+					<div class="marquee__inner marquee-left">
+						<span class="skillbox_container flex">
+							<div class="skillbox"></div>
+							<div class="skillbox red"></div>
+							<div class="skillbox yellow"></div>
+							<div class="skillbox blue"></div>
+							<div class="skillbox orange"></div>
+							<div class="skillbox purple"></div>
+							<div class="skillbox green"></div>
+						</span>
+					</div>
+				</div>
+			</div>
 		</div>
 		<script src="/src/js/carousel.js"></script>
+		<script src="/src/js/marquee.js"></script>
 	</body>
 </html>
