Migrated index.html for GitHub pages support

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link href="../dist/output.css" rel="stylesheet" />
+		<link href="dist/output.css" rel="stylesheet" />
 		<title>Kent Concengco | Portfolio</title>
 	</head>
 	<body>
@@ -110,7 +110,7 @@
 								</div>
 
 								<div class="flex w-1/2 flex-col h-full items-center">
-									<img src="/src/images/Breadventory_UI.png" alt="Breadventory UI">
+									<img src="src/images/Breadventory_UI.png" alt="Breadventory UI">
 								</div>
 
 							</div>
@@ -147,7 +147,7 @@
 							</div>
 
 							<div class="flex w-1/2 flex-col h-full items-center">
-								<img src="/src/images/Breadventory_UI.png" alt="Breadventory UI">
+								<img src="src/images/Breadventory_UI.png" alt="Breadventory UI">
 							</div>
 
 						</div>
@@ -210,7 +210,7 @@
 				</div>
 			</div>
 		</div>
-		<script src="../src/js/carousel.js"></script>
-		<script src="../src/js/marquee.js"></script>
+		<script src="src/js/carousel.js"></script>
+		<script src="src/js/marquee.js"></script>
 	</body>
 </html>
