Migrated Tailwind css to inline classes

--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
 				class="fixed z-20 flex w-full items-center justify-end"
 			>
 				<h1 id="logo" class="xl:mx-8 md:mx-6">KentCode</h1>
-				<a class="nav__links" href="#projects">Projects</a>
-				<a class="nav__links" href="#skills">Skills</a>
-				<a class="nav__links" href="#Projects">Contact</a>
+				<a class="font-semibold md:mx-4 md:text-base xl:my-0 xl:mx-8 xl:text-lg" href="#projects">Projects</a>
+				<a class="font-semibold md:mx-4 md:text-base xl:my-0 xl:mx-8 xl:text-lg" href="#skills">Skills</a>
+				<a class="font-semibold md:mx-4 md:text-base xl:my-0 xl:mx-8 xl:text-lg" href="#Projects">Contact</a>
 			</nav>
 			<!-- Hero section -->
-			<div id="landing" class="section flex-col justify-center xl:px-14 md:px-8">
+			<div id="landing" class="section flex min-h-screen w-full max-w-screen-2xl flex-col justify-center xl:px-14 md:px-8">
 				<div id="landing-text">
 					<p class="xl:text-xl xl:mb-1 md:text-base">Hi, my name is</pc>
 					<h1 class="xl:text-7xl xl:leading-10 md:text-5xl md:leading-9">Kent Concengco</h1>
@@ -32,7 +32,7 @@
 			<!-- Projects section -->
 			<div
 				id="projects"
-				class="section flex-col items-start justify-between pb-3 xl:px-14 xl:pt-8 md:pt-3 md:px-8"
+				class="section flex min-h-screen w-full max-w-screen-2xl flex-col items-start justify-between pb-3 xl:px-14 xl:pt-8 md:pt-3 md:px-8"
 			>
 				<h1 class="w-fit self-center pb-6 xl:text-6xl md:text-4xl">Projects</h1>
 
@@ -83,26 +83,26 @@
 							<div
 								class="carousel__slide current-slide flex h-fit w-full flex-row"
 							>
-								<div class="carousel__slide-text">
-									<h2>Breadventory</h2>
-									<p>
+								<div class="flex h-fit w-1/2 flex-col items-start md:px-4 xl:py-6 xl:px-5">
+									<h2 class="w-fit md:pb-1 md:text-3xl xl:pb-3 xl:text-4xl">Breadventory</h2>
+									<p class="md:pb-4 md:text-base xl:pb-6 xl:text-xl">
 										Lorem ipsum dolor sit amet consectetur adipisicing elit.
 										Deleniti temporibus impedit quibusdam perspiciatis dolore
 										sapiente? Distinctio dolorum dolorem, voluptates dignissimos
 										dicta id sit unde eligendi numquam! Id non quisquam
 										laudantium!
 									</p>
-									<h3>Features</h3>
-									<h4>Feature 1</h4>
-									<p >
+									<h3 class="w-fit md:text-2xl xl:pb-3 xl:text-3xl">Features</h3>
+									<h4 class="w-fit md:text-lg xl:text-2xl">Feature 1</h4>
+									<p class="md:pb-1 md:text-sm xl:pb-4 xl:text-lg">
 										Lorem ipsum dolor sit amet consectetur adipisicing elit.
 										Deleniti temporibus impedit quibusdam perspiciatis dolore
 										sapiente? Distinctio dolorum dolorem, voluptates dignissimos
 										dicta id sit unde eligendi numquam! Id non quisquam
 										laudantium!
 									</p>
-									<h4>Feature 1</h4>
-									<p>
+									<h4 class="w-fit md:text-lg xl:text-2xl">Feature 1</h4>
+									<p class="md:pb-1 md:text-sm xl:pb-4 xl:text-lg">
 										Lorem ipsum dolor sit amet consectetur adipisicing elit.
 										Deleniti temporibus impedit quibusdam perspiciatis dolore
 										sapiente? Distinctio dolorum dolorem, voluptates dignissimos
@@ -117,42 +117,7 @@
 
 							</div>
 							<!-- BuddyUp -->
-							<div
-							class="carousel__slide flex h-fit w-full flex-row"
-						>
-							<div class="carousel__slide-text">
-								<h2>Breadventory</h2>
-								<p>
-									Lorem ipsum dolor sit amet consectetur adipisicing elit.
-									Deleniti temporibus impedit quibusdam perspiciatis dolore
-									sapiente? Distinctio dolorum dolorem, voluptates dignissimos
-									dicta id sit unde eligendi numquam! Id non quisquam
-									laudantium!
-								</p>
-								<h3>Features</h3>
-								<h4>Feature 1</h4>
-								<p >
-									Lorem ipsum dolor sit amet consectetur adipisicing elit.
-									Deleniti temporibus impedit quibusdam perspiciatis dolore
-									sapiente? Distinctio dolorum dolorem, voluptates dignissimos
-									dicta id sit unde eligendi numquam! Id non quisquam
-									laudantium!
-								</p>
-								<h4>Feature 1</h4>
-								<p>
-									Lorem ipsum dolor sit amet consectetur adipisicing elit.
-									Deleniti temporibus impedit quibusdam perspiciatis dolore
-									sapiente? Distinctio dolorum dolorem, voluptates dignissimos
-									dicta id sit unde eligendi numquam! Id non quisquam
-									laudantium!
-								</p>
-							</div>
 
-							<div class="flex w-1/2 flex-col h-full items-center">
-								<img src="src/images/Breadventory_UI.png" alt="Breadventory UI">
-							</div>
-
-						</div>
 							<!-- FindaPotty -->
 
 							<!-- Atlas -->
@@ -162,15 +127,15 @@
 				</div>
 
 				<div class="carousel__nav self-center">
-					<button class="carousel__indicator current-slide"></button
-					><button class="carousel__indicator"></button
-					><button class="carousel__indicator"></button>
-					<button class="carousel__indicator"></button>
+					<button class="carousel__indicator mx-2 rounded-full opacity-40 md:h-3 md:w-3 xl:h-4 xl:w-4 current-slide"></button
+					><button class="carousel__indicator mx-2 rounded-full opacity-40 md:h-3 md:w-3 xl:h-4 xl:w-4"></button
+					><button class="carousel__indicator mx-2 rounded-full opacity-40 md:h-3 md:w-3 xl:h-4 xl:w-4"></button>
+					<button class="carousel__indicator mx-2 rounded-full opacity-40 md:h-3 md:w-3 xl:h-4 xl:w-4"></button>
 				</div>
 			</div>
 
 			<!-- Skills section -->
-			<div id="skills" class="section flex-col justify-center items-center xl:px-14 md:px-8">
+			<div id="skills" class="section flex min-h-screen w-full max-w-screen-2xl flex-col justify-center items-center xl:px-14 md:px-8">
 				<div class="marquee">
 					<div class="marquee__inner marquee-left">
 						<span class="skillbox_container flex">
