--- a/index.html
+++ b/index.html
@@ -25,11 +25,14 @@
 				<a class="font-semibold md:mx-4 md:text-base xl:my-0 xl:mx-8 xl:text-lg" href="#Projects">Contact</a>
 			</nav>
 			<!-- Hero section -->
-			<div id="landing" class="section flex min-h-screen w-full max-w-screen-2xl flex-col justify-center xl:px-14 md:px-8">
-				<div id="landing-text">
+			<div id="landing" class="section flex min-h-screen w-full max-w-screen-2xl justify-around xl:px-14 md:px-8">
+				<div id="landing-text" class="flex flex-col justify-center">
 					<p class="xl:text-xl xl:mb-1 md:text-base">Hi, my name is</pc>
 					<h1 class="xl:text-7xl xl:leading-10 md:text-5xl md:leading-9">Kent Concengco</h1>
 					<h2 class="xl:mt-2 xl:text-3xl md:text-2xl">a software developer</h2>
+				</div>
+				<div id="landing-img" class="flex justify-center items-center">
+					<img src="src/images/Memoji.png" alt="Memoji">
 				</div>
 			</div>
 
