--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
 								</div>
 
 								<div
-									class="carousel__slide-img hidden-project m:w-1/2 flex h-full flex-col items-center justify-center"
+									class="carousel__slide-img hidden-project flex h-full flex-col items-center justify-center md:w-1/2"
 								>
 									<img
 										src="src/images/Breadventory_UI.png"
@@ -235,7 +235,7 @@
 								</div>
 
 								<div
-									class="carousel__slide-img hidden-project m:w-1/2 flex h-full flex-col items-center justify-center"
+									class="carousel__slide-img hidden-project flex h-full flex-col items-center justify-center md:w-1/2"
 								>
 									<img
 										src="src/images/BuddyUp UI_iphone12promaxsilver_portrait.png"
@@ -284,7 +284,7 @@
 								</div>
 
 								<div
-									class="carousel__slide-img hidden-project m:w-1/2 flex h-full flex-col items-center justify-center"
+									class="carousel__slide-img hidden-project flex h-full flex-col items-center justify-center md:w-1/2"
 								>
 									<img
 										src="src/images/Findapotty UI_iphone12promaxsilver_portrait.png"
@@ -320,9 +320,8 @@
 									</p>
 								</div>
 
-
 								<div
-									class="carousel__slide-img hidden-project m:w-1/2 flex h-full flex-col items-center justify-center"
+									class="carousel__slide-img hidden-project flex h-full flex-col items-center justify-center md:w-1/2"
 								>
 									<iframe
 										src="https://www.youtube.com/embed/NJ8Lq3SZ7nA"
@@ -465,6 +464,11 @@
 					</div>
 				</div>
 			</div>
+
+			<!-- Footer -->
+			<footer class="flex w-full max-w-screen-2xl items-center justify-center">
+				<p>Kent Concengco © 2022</p>
+			</footer>
 		</div>
 		<script src="src/js/carousel.js"></script>
 		<script src="src/js/marquee.js"></script>
