--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 			>
 				<div
 					id="landing-img"
-					class="order-2 flex items-center justify-center md:order-1"
+					class="order-2 mt-6 flex items-center justify-center md:order-1 md:mt-0"
 				>
 					<img src="src/images/Memoji.png" alt="Memoji" />
 				</div>
@@ -85,6 +85,29 @@
 						and physical sciences, currently looking to jumpstart my career in
 						the tech industry!
 					</p>
+					<div class="mt-3 flex items-center">
+						<a
+							class="resume_btn mr-4 rounded-lg p-1.5 pl-3 xl:text-xl"
+							href="src/file/Kent Concengco - Resume.pdf"
+							target="_blank"
+						>
+							Get my Résumé!
+						</a>
+						<a
+							class="socmed_icon mr-4 text-3xl xl:text-4xl"
+							href="https://github.com/Kent-Danielle"
+							target="_blank"
+						>
+							<i class="fa-brands fa-square-github"></i>
+						</a>
+						<a
+							class="socmed_icon mr-4 text-3xl xl:text-4xl"
+							href="https://www.linkedin.com/in/kentconcengco/"
+							target="_blank"
+						>
+							<i class="fa-brands fa-linkedin"></i>
+						</a>
+					</div>
 				</div>
 			</div>
 
@@ -471,7 +494,9 @@
 			</div>
 
 			<!-- Footer -->
-			<footer class="flex w-full max-w-screen-2xl items-center justify-center">
+			<footer
+				class="my-3 flex w-full max-w-screen-2xl items-center justify-center px-4"
+			>
 				<p>Kent Concengco © 2022</p>
 			</footer>
 		</div>
